# ascent

./: .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .zenodo.json  Batch.slurm  DUMMY-NAME-DELETE-THIS-LATER  Install  LICENSE  Launch.hoc  Launch0.hoc  Launch1.hoc  Launch2.hoc  Launch3.hoc  README.md  README.md.rej  SL.ps  StartSim1526.slurm  dev_requirements.txt  env_setup.py  figure1.py  figure3.py  figure4.py  import_n_sims.py  master_index_key.xlsx  mkdocs.yml  mock_morphology_generator.py  mock_morphology_generator.py~  mock_nerve_generator.py  plot_ve.py  pyproject.toml  query.py  query.py~  requirements-dev.txt  requirements.txt  run  (+7 more)
.config/: exceptions.json  master.json  master2.json  model.json  sample.json  system.json
.templates/: CORETEC_FINAL.java  CORETEC_FINAL_wRECESS.java  CorTec.json  CorTec300params.csv  ENTEROMEDICS_FINAL_wRECESS.java  Enteromedics.json  IMTHERA_FINAL.java  ImThera.json  LIVANOVA_FINAL.java  LivaNova.json  MADISON_FINAL_wRECESS.java  Madison.json  MicroLeads.json  PURDUE_FINAL.java  Pitt.json  Purdue.json  electrode_input.json  morphology.json
First_NeuronSim/: BatchRun.hoc  CreateAxon_Myel.hoc  CreateFiber_Unmyel.hoc  RunSim.hoc  Wrapper.hoc  launch.hoc
Second_NeuronSim/: 6.json  ExtracellularStim_Time.hoc  RunSim.hoc  Testing.hoc  Wrapper.hoc  cFiberBuilder.hoc  launch.hoc
Test1/: 0.json  CreateFiber_CFiber.hoc  ExtracellularStim_Space.hoc  FindThresh.hoc  ObjectArray_1d.hoc  SaveSpatialDist.hoc  Saving_Runtime.hoc  Saving_Thresh.hoc  Wrapper_block.hoc  launch.hoc
Test3/: 0.json  CreateAxon_Myel.hoc  ExtracellularStim_Space.hoc  FindThresh.hoc  MRGaxon_unmyelinated_VBLOCSim.hoc  ModelParams.hoc  SaveSpatialDist.hoc  Saving.hoc  Saving_Thresh.hoc  bFiberBuilder.hoc  cFiberBuilder.hoc  launch.hoc
data/: Cadaver54-3ScaleLength.mat  tracefile.tif  tracefile4.tif
debug/: TODO  fiber_metadata_order.txt  iTerm2 Session Sep 7, 2019 at 11:59:11 AM.txt  test_build_commands.txt
docs/: 1-abstract.md  2-intro.md  3-methods.md  index.md  make.bat  rtd_requirements.txt
examples/: MicroLeadsCuffMeasurements.xlsx
paper_figures/: figure1.py  figure2.py  figure3.py  figure4.py
plotting_models/: model0.json  model1.json
(+1007 files in other folders)
