[project]
name = "ASCENT"
version = "v1.2.2"

description = "A pipeline for sample-specific computational modeling of electrical stimulation of peripheral nerves"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/wmglab-duke/ascent"
documentation = "https://wmglab-duke-ascent.readthedocs.io/en/latest/"
changelog = "https://github.com/wmglab-duke/ascent/releases"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.rstcheck]
ignore_directives = [
    "details",
    "argparse",
    "changelog",
    "bibliography",
    "tab",
    "automodule",
    "youtube"
]

[tool.flynt]
line-length = 120

[tool.docformatter]
wrap-summaries = 0
wrap-descriptions = 0
in-place = true
