[project]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
description = "A pipeline for sample-specific computational modeling of electrical stimulation of peripheral nerves"
license = {file = "LICENSE"}
name = "ASCENT"
readme = "README.md"
requires-python = ">=3.10"
version = "v1.4.0"

[project.urls]
changelog = "https://github.com/wmglab-duke/ascent/releases"
documentation = "https://wmglab-duke-ascent.readthedocs.io/en/latest/"
homepage = "https://github.com/wmglab-duke/ascent"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.docformatter]
in-place = true
wrap-descriptions = 0
wrap-summaries = 0

[tool.flynt]
line-length = 120

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.rstcheck]
ignore_directives = [
  "details",
  "argparse",
  "changelog",
  "bibliography",
  "tab",
  "automodule",
  "youtube"
]
